--- a/2324802010380-NguyenNgocTram/Trangchu.html
+++ b/2324802010380-NguyenNgocTram/Trangchu.html
@@ -27,7 +27,6 @@
         <a href="book.html">Đặt nhà hàng</a>
         <a href="review.html">Review</a>
         <a href="contact.html">Liên hệ</a>
-        <a href="Map.html">Map</a>
     </nav>
     <div class="icon">
         <i class="fas fa-search" id="search-btn"></i>
@@ -47,14 +46,14 @@
            <h3>Login</h3>
            <input type="email" class="box" placeholder="Email(*)...">
            <input type="password" class="box" placeholder="Password(*)...">
-          <input type="submit" value="Đăng nhập" class="btn">
+           <input type="submit" value="Đăng nhập" class="btn">
            <input type="checkbox" id="remember">
            <label for="remember">Nhớ tài khoản</label>
            <p>Quên password ? <a href="#">Nhấn vào đây</a></p>
            <p>Không có tài khoản ? <a href="#">Đăng ký ngay nào!</a></p>
 
          </form>
-         
+ 
 
 
       </div>
@@ -89,7 +88,7 @@
     <div class="thongtin">
         <img src="img-video/banhxeo.jpg" alt="banhxeo.jnp" class="monan">
         <a href="banhxeo.html"><h3 style="font-size: 27px ;text-align: center;" >BÁNH XÈO</h3></a>
-        <p>Bánh xèo là một món ăn truyền thống thuần túy và rất quen thuộc đối với chúng ta. Tuy nhiên ngày nay, bánh xèo Việt Nam đã trở thành một cái tên đặc biệt. Luôn luôn được nhắc đến bởi nhiều người nước ngoài khi ghé thăm Việt Nam. Bánh xèo cũng được...</p>
+        <p>Tìm hiểu nguồn gốc của bánh xèo ?....</p>
    </div>
 
    <div class="thongtin">
