--- a/2324802010380-NguyenNgocTram/amthucvietnam.html
+++ b/2324802010380-NguyenNgocTram/amthucvietnam.html
@@ -20,14 +20,13 @@
           <img src="img-video/Vietnamfood.png" alt="Vietnamfood.png">
         <a href="#" class="title"><span>VIETNAM</span>FOOD</a>
     
-        <nav id="Menu">
-            <a href="Trangchu.html" class="home">Trang chủ</a>
-            <a href="information.html">Thông tin</a>
-            <a href="book.html">Đặt nhà hàng</a>
-            <a href="review.html">Review</a>
-            <a href="contact.html">Liên hệ</a>
-            <a href="Map.html">Map</a>
-        </nav>
+    <nav id="Menu">
+        <a href="Trangchu.html" class="home">Trang chủ</a>
+        <a href="information.html">Thông tin</a>
+        <a href="book.html">Đặt nhà hàng</a>
+        <a href="review.html">Review</a>
+        <a href="contact.html">Liên hệ</a>
+    </nav>
     <div class="icon">
         <i class="fas fa-search" id="search-btn"></i>
         <i class="fas fa-user" id="login-btn"></i>
@@ -83,11 +82,11 @@
     <span class="box-1"> Từ khóa</span>  
     <div class="keyword">
     <div class="keyword-slide">
-     <a href="amthucvietnam.html">Ẩm thực Việt Nam</a>   
-     <a href="amthuc3mien.html">Ẩm thực 3 miền</a> 
-     <a href="amthuclete.html">Ẩm thực lễ tết</a>
-     <a href="amthucduongpho.html">Ẩm thực Đường phố </a>
-     <a href="amthuctinhthanh.html">Ẩm thực các tỉnh, thành</a>
+     <a href="">Ẩm thực Việt Nam</a>   
+     <a href="">Ẩm thực 3 miền</a> 
+     <a href="">Ẩm thực lễ tết</a>
+     <a href="">Ẩm thực Đường phố Ẩm thực các tỉnh, thành</a>
+     <a href="">Ẩm thực Đường phố</a>
     </div>
 </div>
 </div>
