--- a/2324802010380-NguyenNgocTram/chagio.html
+++ b/2324802010380-NguyenNgocTram/chagio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chả giò món ăn mang đậm nét văn hóa truyền thống Việt Nam</title>
+    <title>Phở Hà Nội - một nét đặc sắc trong ẩm thực Hà thành</title>
     <link rel="icon" href="img-video/Vietnamfood.png">
     <link rel="stylesheet" href="web.css">
     <link rel="stylesheet" href="inf.css">
@@ -20,14 +20,13 @@
           <img src="img-video/Vietnamfood.png" alt="Vietnamfood.png">
         <a href="#" class="title"><span>VIETNAM</span>FOOD</a>
     
-        <nav id="Menu">
-            <a href="Trangchu.html" class="home">Trang chủ</a>
-            <a href="information.html">Thông tin</a>
-            <a href="book.html">Đặt nhà hàng</a>
-            <a href="review.html">Review</a>
-            <a href="contact.html">Liên hệ</a>
-            <a href="Map.html">Map</a>
-        </nav>
+    <nav id="Menu">
+        <a href="Trangchu.html" class="home">Trang chủ</a>
+        <a href="information.html">Thông tin</a>
+        <a href="book.html">Đặt nhà hàng</a>
+        <a href="review.html">Review</a>
+        <a href="contact.html">Liên hệ</a>
+    </nav>
     <div class="icon">
         <i class="fas fa-search" id="search-btn"></i>
         <i class="fas fa-user" id="login-btn"></i>
@@ -58,24 +57,25 @@
 
 <!--amthucvietnam-->
 <div class="vietnam">
-    <h1 class="at">Chả giò món ăn mang đậm nét văn hóa truyền thống Việt Nam</h1>
+    <h1 class="at">Phở Hà Nội - một nét đặc sắc trong ẩm thực Hà thành</h1>
     <p class="tg">3/2/2024 15:27 GMT+7</p>
     <hr class="hr1">
     <section class="noidung">
-        <p>Nếu đã là người Việt Nam, không thể không biết đến chả giò. Đây là món ăn không thể thiếu trên bàn tiệc của người Việt trong dịp Tết đến xuân về. Và chả giò hiện nay được nấu nhiều trong bữa cơm gia đình. Chả giò là tên gọi quen thuộc đối với người dân miền Nam. Món ăn này sẽ có tên là nem rán tại miền Bắc và ở miền Trung sẽ gọi tên gọi là ram. Ở mỗi vùng miền, người ta sẽ chế biến chả giò theo nhiều kiểu với nhiều hương vị khác nhau. Đến mỗi vùng miền trên khắp cả nước, thực khách sẽ được thưởng thức mùi vị chả giò khác nhau, mang đậm bản sắc văn hóa mỗi vùng miền.</p>
-        <img src="./img-video/chagio1.jpg" alt="letet4.jpg" class="img12">
-        <p class="p1">hình 1. Chả giò món ăn mang đậm nét văn hóa truyền thống Việt Nam</p>
-     <p>Chả giò truyền thống bao gồm thịt nạc xay, củ đậu, cà rốt, nấm hương, miến, mộc nhĩ và trứng. Nhân được thái nhỏ, trộn đều và được gói lại xinh xắn bên ngoài lớp bánh tráng. Hương vị thơm ngon, sự cân bằng về hương vị đã tạo nên sự độc đáo cho món ăn này. Miếng chả giò được chiên vàng đều. Ngay khi cắn một miếng ta có thể cảm nhận được sự giòn tan, hơi mặn của bánh tráng. Vị ngọt, chín tới của rau củ bên trong. Tất cả đã tạo nên tổng thể hương vị riêng biệt, chỉ có tại ẩm thực Việt Nam.</p><br>
-        <p>Theo thời gian, chả giò được biến tấu với sự kết hợp của nhiều loại nhân mới và hình dạng cuốn cũng được phá cách. Không chỉ đơn thuần là chả giò thịt heo, bạn có thể thay thế với thịt bò hoặc làm nhân hải sản cũng rất ngon. Bạn có thể thêm nhân phô mai để tạo sự đột phá ngoại mục cho món ăn. Và chả giò chay cũng là một sự lựa chọn hoàn hảo cho cuộc sống hiện đại. Chả giò, một món ăn mang đầy đủ sự tinh tế, kết hợp nguyên liệu khéo léo. Đã tạo nên thương hiệu chả giò không thể lẫn với bất kỳ ẩm thực quốc gia nào. Sau đây, chúng ta sẽ cùng nhau chế biến món chả giò này tại nhà nhé.
+        <p>Ngày xưa, nhân dân ta (dân Bắc và Hà Nội) rất ít ăn thịt bò. Có món ăn rất phổ biến là xáo trâu ăn với bún. Nước xáo trâu chan lên bát bún có bày mấy miếng thị trâu đã xào qua.
+            Đầu thế kỷ XX, ở Hà Nội chỉ có mấy của hàng thịt bò nhưng ế ẩm, không bán hết. Nhất là xương bò chẳng ai mua. Một số hàng xáo trâu liền mua thịt bò ế về thay cho thịt trâu. Lấy xương bò đun lên làm nước xáo. Nhưng thật không ngờ họ thấy thịt bò thơm ngon mà xương bò thì rất ngọt. Thế là bún xáo bò ra đời. Sau đó, người ta thay bún bằng những lát bánh cuốn tráng, thấy càng ngon hơn. Từ đó, món xáo bò này được cải tiến không ngừng. Họ rao bán xáo bò một cách khá khôn ngoan là rao bằng tiếng Quảng Đông cho nó oai và lạ tai là ngầu nhục phấn rồi thành “nhục phấn… phấn ơ”… sau cùng còn lại tiếng phở… Phở là món ăn do người Việt Nam tạo ra.</p>
+        <img src="img-video/amthuc3mien/mienbac/phohanoi.jpg" alt="letet4.jpg" class="img12">
+        <p class="p1">Phở Hà Nội - một nét đặc sắc trong ẩm thực Hà thành</p>
+     <p>Phở Hà Nội có từ khi nào? Năm 1930, đã bắt đầu có phở ở Hà Nội. Nhưng mới là phở ban đầu. Những năm 1937-1938 phở đã có mặt ở khắp nơi. Nhưng đến năm 1939 - 1942 mới là thời đại hoàng kim của phở tại Hà Nội. Thật vậy, phở đã đến với tất cả các tầng lớp trong xã hội. Nó đã đạt đến mức ngon nhất, không thể nào ngon hơn được nữa. Nó có mặt suốt xuân, hạ, thu, đông. Người ta săn tìm, kén chọn những gánh phở, xe phở, hiệu phở cây đa Lý Quốc Sư, gánh nhà Thương Mắt, gánh chợ Hôm, gánh Cống Vọng, Hàm Long, Chợ Đuổi… và cũng nổi lên những hào kiệt:  phở Hội, phở Hiến, phở Tư Hói, phở Sửu đen, phở Tráng…</p><br>
+        <p>Ở Hà Nội, phở là một món ăn đặc biệt của người Hà Nội  và được dùng riêng 
+            như là một món quà sáng hoặc trưa và tối, không ăn cùng các món ăn khác. 
+            Từ giữa những năm 1960 đến trước những năm 1990 của thế kỷ XX, vì nhiều lý do nhất là khâu quản lý hành chính bao cấp về lương thực, thực phẩm, tại Hà Nội và nhiều tỉnh miền Bắc xuất hiện "phở không người lái" (phở không thịt) trong các cửa hàng mậu dịch quốc doanh. Cũng từ thời bao cấp, ở Hà Nội, người ta thường có thói quen cho thêm nhiều mì chính vào nước dùng. Cùng với thời đổi mới từ thập niên 90, phở đã phong phú hơn và người Hà Nội thường ăn phở với những miếng quẩy nhỏ (từ thập kỷ 60 đến giữa thập kỷ 80 nhưng do ở giai đoạn khó khăn nên quẩy bị mất đi khoảng 1995 quẩy đã quay trở lại).   
         </p>
-     <img src="./img-video/chagio3.jpg" alt="pho2.jpg">
-     <p class="p1">hình 2. Chả giò món ăn mang đậm nét văn hóa truyền thống Việt Nam</p>
-     <p>Không phải là “cao lương mỹ vị”, chả giò Việt Nam chỉ đơn thuần là món ăn khai vị trong bữa cơm sum họp gia đình. Đến những ngày lễ Tết hoặc dịp đặc biệt, các thành viên trong gia đình sẽ cùng nhau tham gia công đoạn làm chả giò,... Sau đó, mọi người sẽ quây quần bên mâm cơm và thưởng thức thành quả đặc biệt của mình trong bầu không khí ấm cúng.
-
-        Chính vì vậy, chả giò mang biểu tượng ý nghĩa cho sự đoàn kết và gắn kết tình cảm gia đình. Mỗi bữa ăn gia đình, chả giò đã trở thành món khai vị không thể thiếu.</p>
-     <img src="./img-video/chagio4.jpg" alt="pho1.jpg">
-     <p class="p1">hình 3. Chả giò món ăn mang đậm nét văn hóa truyền thống Việt Nam</p>
-      <p>Từ các lễ hội linh đình đến bữa ăn sum họp đơn thuần, chả giò Việt Nam là món ăn quen thuộc có mặt khắp mọi nơi. Vì thế, việc làm chả giò được xem như một bộ môn nghệ thuật được lưu truyền qua từng thế hệ. Điều này không chỉ góp phần bảo tồn giá trị văn hóa mà còn là cơ hội truyền bá ẩm thực Việt Nam đến bạn bè năm châu thế giới.</p>      
+     <img src="img-video/pho2.jpg" alt="pho2.jpg">
+     <p class="p1">Phở Hà Nội - một nét đặc sắc trong ẩm thực Hà thành</p>
+     <p>Thành phần chính của phở là bánh phở và nước dùng (hay nước lèo theo cách gọi miền Nam) cùng với thịt bò hoặc gà cắt lát mỏng. Ngoài ra còn kèm theo các gia vị như: tương, tiêu, chanh, nước nắm, ớt,... Những gia vị này được thêm vào tùy theo khẩu vị của từng người dùng. Phở thông thường dùng làm món điểm tâm buổi sáng hoặc ăn đêm, nhưng ở các thành phố lớn món ăn này được thưởng thức trong cả ngày.
+      Để có được những bát phở ngon tùy thuộc rất nhiều vào kinh nghiệm và bí quyết truyền thống của người chế biến, trong đó quan trọng đặc biệt là nồi nước dùng. Nước dùng cho nồi phở thường là nước dùng trong được ninh từ xương bò (nếu người nội trợ không nhiều kinh nghiệm để khử mùi xương bò thì có thể thay bằng xương lợn), sá sùng, kèm nhiều loại gia vị bao gồm quế, hồi, gừng nướng, thảo quả, đinh hương, hạt mùi, hành khô nướng. Thịt dùng cho món phở là thịt bò (với đủ loại thịt bắp, nạm, gầu được làm tái hay chín hẳn) hoặc thịt gà (gà ta già luộc, xé thịt cho thịt ngọt đậm đà). "Bánh phở" theo truyền thống được làm từ bột gạo, tráng thành tấm mỏng rồi cắt thành sợi. Phở luôn được thưởng thức khi còn nóng hổi.</p>
+     <img src="img-video/pho1.jpg" alt="pho1.jpg">
+      <p>Phở luôn được gia công, cải tiến để thoả mãn cái “gu” thanh lịch của người Tràng An. Người ta nghĩ ra nhiều cách như cho vào nước dùng chất ngọt thực vật của su hào rồi cho thêm tôm he, sá sùng, húng lìu, gừng, xương lợn… Nước dùng được ninh bằng củi trong 12 tiếng đồng hồ với ngọn lửa nhẹ. Mở nắp thùng nước dùng ra là có một làn khói mơ hồ, thơm nức từ đầu phố đến cuối phố. Nó có một mùi vị dễ chịu, không thể nào quên được. Vừa trần gian vừa bay bổng.Trên thế giới nước nào có người Việt Nam là ở đó có phở. Các bạn nước ngoài mỗi khi sang Việt Nam cũng tìm đến với món phở. Phở dường như là một trong những nét tiêu biểu của văn hoá ẩm thực Thăng Long – Hà Nội.</p>      
     </section>
      <hr class="hr1">
 </div>
@@ -86,11 +86,11 @@
     <span class="box-1"> Từ khóa</span>  
     <div class="keyword">
     <div class="keyword-slide">
-     <a href="amthucvietnam.html">Ẩm thực Việt Nam</a>   
-     <a href="amthuc3mien.html">Ẩm thực 3 miền</a> 
-     <a href="amthuclete.html">Ẩm thực lễ tết</a>
-     <a href="amthucduongpho.html">Ẩm thực Đường phố </a>
-     <a href="amthuctinhthanh.html">Ẩm thực các tỉnh, thành</a>
+     <a href="">Ẩm thực Việt Nam</a>   
+     <a href="">Ẩm thực 3 miền</a> 
+     <a href="">Ẩm thực lễ tết</a>
+     <a href="">Ẩm thực Đường phố Ẩm thực các tỉnh, thành</a>
+     <a href="">Ẩm thực Đường phố</a>
     </div>
 </div>
 </div>
