--- a/2324802010380-NguyenNgocTram/information.html
+++ b/2324802010380-NguyenNgocTram/information.html
@@ -22,14 +22,13 @@
           <img src="img-video/Vietnamfood.png" alt="Vietnamfood.png">
         <a href="#" class="title"><span>VIETNAM</span>FOOD</a>
     
-        <nav id="Menu">
-            <a href="Trangchu.html" class="home">Trang chủ</a>
-            <a href="information.html">Thông tin</a>
-            <a href="book.html">Đặt nhà hàng</a>
-            <a href="review.html">Review</a>
-            <a href="contact.html">Liên hệ</a>
-            <a href="Map.html">Map</a>
-        </nav>
+    <nav id="Menu">
+        <a href="Trangchu.html" class="home">Trang chủ</a>
+        <a href="information.html">Thông tin</a>
+        <a href="book.html">Đặt nhà hàng</a>
+        <a href="review.html">Review</a>
+        <a href="contact.html">Liên hệ</a>
+    </nav>
     <div class="icon">
         <i class="fas fa-search" id="search-btn"></i>
         <i class="fas fa-user" id="login-btn"></i>
@@ -87,19 +86,19 @@
  <h1 class="h12">Thông tin nổi bật</h1>
     <div class="cactintuc">
         <div class="tintuccon">
-                <img src="img-video/pho5.jpg" alt="pho5.jpg" class="monan1">
+                <img src="img-video/comneu.jpg" alt="comneu.jpg" class="monan">
                 <a href="pho.html"><h1>Phở Hà Nội</h1></a>
                 <p>Phở là một món ăn truyền thống của Việt Nam, cũng có thể xem là một trong những món ăn tiêu biểu cho ẩm thực Việt Nam ẩm thực Việt Nam. Nổi tiếng nhất phải nói đến phở Bắc. Hà Nội chính là nơi khai sinh ra phở Bắc. Phở dường như là một trong những nét đặc sắc, tiêu biểu của văn hoá ẩm thực Thăng Long – Hà Nội... </p>
         </div>
         <div class="tintuccon">
-            <img src="./img-video/bunbohue1.jpg" alt="comneu.jpg" class="monan">
-            <a href="bunbohue.html"><h1>Bún bò Huế</h1></a>
-            <p>Bún bò Huế xưa ra đời từ thời chúa Nguyễn Hoàng (khoảng thế kỷ thứ 16). Tương truyền, xưa có cô Bún xinh đẹp, giỏi giang, thạo nghề làm bún. Tại làng Vân Cù (nay thuộc thị xã Hương Trà, tỉnh Thừa Thiên Huế), cô Bún đã sáng tạo ra cách chế biến một món ăn mới: Lấy thịt bò nấu thành nước dùng cho món bún. Từ đó, món bún bò ra đời, được lưu giữ và phát triển... </p>
+            <img src="img-video/comneu.jpg" alt="comneu.jpg" class="monan">
+            <a href="pho.html"><h1>Bún bò Huế</h1></a>
+            <p>Sự hấp dẫn đến ngay từ ánh nhìn đầu tiên với từng đường nét giản đơn, sang trọng hoàn hảo. Corolla Altis xứng đáng là thủ lĩnh những cung đường, là lựa chọn hoàn hảo để thể hiện chất riêng lẫn phục vụ công việc hiệu quả. </p>
         </div>
         <div class="tintuccon">
-            <img class="banhmi1" src="./img-video/banhmi.jpg" alt="comneu.jpg" class="monan">
-            <a href="./banhmi.html"><h1>Bánh mì</h1></a>
-            <p>Tại Việt Nam, mọi người có thể gặp bất cứ một hàng bánh mì nào khắp các nẻo đường, từ Quốc lộ, trục đường lớn cho đến những con hẻm nhỏ bé ít người biết đến. Mặc dù vô cùng phổ biến nhưng không phải ai cũng có thể khẳng định hiểu hết về món "sandwich" này... </p>
+            <img src="img-video/comneu.jpg" alt="comneu.jpg" class="monan">
+            <a href="pho.html"><h1>Bánh mì</h1></a>
+            <p>Sự hấp dẫn đến ngay từ ánh nhìn đầu tiên với từng đường nét giản đơn, sang trọng hoàn hảo. Corolla Altis xứng đáng là thủ lĩnh những cung đường, là lựa chọn hoàn hảo để thể hiện chất riêng lẫn phục vụ công việc hiệu quả. </p>
         </div>
         <hr class="hr1">
     </div>
@@ -109,19 +108,19 @@
  <div class="cacmenucon">     
     <div class="menucon">
         <a href="amthuc3mien.html"><img src="img-video/buaan.jpg" alt=""></a>
-        <a href="amthuc3mien.html"><p>Ẩm thực 3 miền</p></a>
+        <a href="amthuc3mien.html"></a><p>Ẩm thực 3 miền</p></a>
     </div>
     <div class="menucon">
-        <a href="amthuclete.html"><img src="./img-video/amthucletet1.jpg" alt=""></a>
-        <a href="amthuclete.html"><p>Ẩm thực Lễ tết</p></a>
+        <a href="amthuclete.html"><img src="img-video/buaan.jpg" alt=""></a>
+        <a href="amthuclete.html"></a><p>Ẩm thực Lễ tết</p></a>
     </div>
     <div class="menucon">
-        <a href="amthucduongpho.html"><img src="./img-video/amthucduongpho1.jpg" alt=""></a>
+        <a href="amthucduongpho.html"><img src="img-video/buaan.jpg" alt=""></a>
         <a href="amthucduongpho.html"><p>Ẩm thực Đường phố</p></a>
     </div>
     <div class="menucon">
-        <a href="amthuctinhthanh.html"><img src="./img-video/amthuctinhthanh.jpg"  alt=""></a>
-        <a href="amthuctinhthanh.html"><p>Ẩm thực tỉnh thành</p></a>
+        <a href="amthuctinhthanh.html"><img src="img-video/buaan.jpg" alt=""></a>
+        <a href="amthuctinhthanh.html"></a><p>Ẩm thực tỉnh thành</p></a>
     </div>
  </div>
 <!--Amthucvietnam-->
@@ -133,16 +132,16 @@
         <a href=""></a>
     </div>
     <div class="menucon">
-        <a href="amthuclete.html"><img src="./img-video/mienbac.jpg" alt=""></a>
-        <a href="amthuclete.html"><p>Ẩm thực miền Bắc</p></a>
+        <a href="amthuclete.html"><img src="img-video/buaan.jpg" alt=""></a>
+        <a href="amthuclete.html"></a><p>Ẩm thực miền Bắc</p></a>
     </div>
     <div class="menucon">
-        <a href="amthuclete.html"><img src="./img-video/am-thuc-ba-mien-Copy.jpg" alt=""></a>
-        <a href="amthuclete.html"><p>Ẩm thực miền Nam</p></a>
+        <a href="amthucduongpho.html"><img src="img-video/buaan.jpg" alt=""></a>
+        <a href="amthucduongpho.html"><p>Ẩm thực miền Nam</p></a>
     </div>
     <div class="menucon">
-        <a href="amthuclete.html"><img src="./img-video/miennam.jpg" alt=""></a>
-        <a href="amthuclete.html"><p>Ẩm thực Miền Trung</p></a>
+        <a href="amthuctinhthanh.html"><img src="img-video/buaan.jpg" alt=""></a>
+        <a href="amthuctinhthanh.html"></a><p>Ẩm thực Miền Trung</p></a>
     </div>
  </div>
 <!--Amthuc3mien-->
@@ -154,11 +153,18 @@
         <a href=""></a>
     </div>
     <div class="menucon">
-        <a href="amthuclete.html"><img src="./img-video/letet1.jpg" alt=""></a>
-        <a href="amthuclete.html"><p>Ẩm thực Lễ tết</p></a>
+        <a href="amthuclete.html"><img src="img-video/buaan.jpg" alt=""></a>
+        <a href="amthuclete.html"></a><p>Ẩm thực miền Bắc</p></a>
+    </div>
+    <div class="menucon">
+        <a href="amthucduongpho.html"><img src="img-video/buaan.jpg" alt=""></a>
+        <a href="amthucduongpho.html"><p>Ẩm thực miền Nam</p></a>
+    </div>
+    <div class="menucon">
+        <a href="amthuctinhthanh.html"><img src="img-video/buaan.jpg" alt=""></a>
+        <a href="amthuctinhthanh.html"></a><p>Ẩm thực Miền Trung</p></a>
     </div>
  </div>
- <hr class="hr1">
 <!---->
 <h1 class="at4">ẨM THỰC ĐƯỜNG PHỐ</h1>
  <div class="cacmenucon">     
@@ -166,10 +172,17 @@
         <a href=""></a>
     </div>
     <div class="menucon">
-        <a href="amthucduongpho.html"><img src="./img-video/duong1.jpg" alt=""></a>
-        <a href="amthucduongpho.html"><p>Ẩm thực Đường phố</p></a>
+        <a href="amthuclete.html"><img src="img-video/buaan.jpg" alt=""></a>
+        <a href="amthuclete.html"></a><p>Ẩm thực miền Bắc</p></a>
     </div>
-    
+    <div class="menucon">
+        <a href="amthucduongpho.html"><img src="img-video/buaan.jpg" alt=""></a>
+        <a href="amthucduongpho.html"><p>Ẩm thực miền Nam</p></a>
+    </div>
+    <div class="menucon">
+        <a href="amthuctinhthanh.html"><img src="img-video/buaan.jpg" alt=""></a>
+        <a href="amthuctinhthanh.html"></a><p>Ẩm thực Miền Trung</p></a>
+    </div>
  </div>
 <!--mucluc-->
 <div>
