--- a/2324802010380-NguyenNgocTram/nemchua.html
+++ b/2324802010380-NguyenNgocTram/nemchua.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nem chua của Việt Nam giúp khoa học thế giới giải bài toán hóc búa</title>
+    <title>Phở Hà Nội - một nét đặc sắc trong ẩm thực Hà thành</title>
     <link rel="icon" href="img-video/Vietnamfood.png">
     <link rel="stylesheet" href="web.css">
     <link rel="stylesheet" href="inf.css">
@@ -20,14 +20,13 @@
           <img src="img-video/Vietnamfood.png" alt="Vietnamfood.png">
         <a href="#" class="title"><span>VIETNAM</span>FOOD</a>
     
-        <nav id="Menu">
-            <a href="Trangchu.html" class="home">Trang chủ</a>
-            <a href="information.html">Thông tin</a>
-            <a href="book.html">Đặt nhà hàng</a>
-            <a href="review.html">Review</a>
-            <a href="contact.html">Liên hệ</a>
-            <a href="Map.html">Map</a>
-        </nav>
+    <nav id="Menu">
+        <a href="Trangchu.html" class="home">Trang chủ</a>
+        <a href="information.html">Thông tin</a>
+        <a href="book.html">Đặt nhà hàng</a>
+        <a href="review.html">Review</a>
+        <a href="contact.html">Liên hệ</a>
+    </nav>
     <div class="icon">
         <i class="fas fa-search" id="search-btn"></i>
         <i class="fas fa-user" id="login-btn"></i>
@@ -58,21 +57,25 @@
 
 <!--amthucvietnam-->
 <div class="vietnam">
-    <h1 class="at">Nem chua của Việt Nam giúp khoa học thế giới giải bài toán hóc búa</h1>
+    <h1 class="at">Phở Hà Nội - một nét đặc sắc trong ẩm thực Hà thành</h1>
     <p class="tg">3/2/2024 15:27 GMT+7</p>
     <hr class="hr1">
     <section class="noidung">
-        <p>Việt Nam là quốc gia sở hữu nhiều món ăn độc đáo, thậm chí khiến người nước ngoài phải "sửng sốt" trước cách mà chúng ta có thể chế biến và tiêu thụ những món ăn như vậy.</p>
-        <img src="./img-video/nemchua1.webp" alt="letet4.jpg" class="img12">
-        <p class="p1">Nem chua của Việt Nam giúp khoa học thế giới giải bài toán hóc búa        </p>
-     <p>Điển hình trong số đó phải kể tới nem chua, khi đây thực ra là thịt sống, kết hợp cùng khí hậu nóng ẩm dễ khiến vi khuẩn sinh sôi, nhưng lại có thể được ăn một cách ngon lành mà không gây hại gì cho cơ thể.</p><br>
-        <p>Điều này đã truyền cảm hứng cho các nhà khoa học tại RMIT, dẫn đầu bởi Giáo sư Andrew Smith và Tiến sĩ Bee May khi họ quyết định thực hiện một nghiên cứu chuyên sâu về món ăn này.
+        <p>Ngày xưa, nhân dân ta (dân Bắc và Hà Nội) rất ít ăn thịt bò. Có món ăn rất phổ biến là xáo trâu ăn với bún. Nước xáo trâu chan lên bát bún có bày mấy miếng thị trâu đã xào qua.
+            Đầu thế kỷ XX, ở Hà Nội chỉ có mấy của hàng thịt bò nhưng ế ẩm, không bán hết. Nhất là xương bò chẳng ai mua. Một số hàng xáo trâu liền mua thịt bò ế về thay cho thịt trâu. Lấy xương bò đun lên làm nước xáo. Nhưng thật không ngờ họ thấy thịt bò thơm ngon mà xương bò thì rất ngọt. Thế là bún xáo bò ra đời. Sau đó, người ta thay bún bằng những lát bánh cuốn tráng, thấy càng ngon hơn. Từ đó, món xáo bò này được cải tiến không ngừng. Họ rao bán xáo bò một cách khá khôn ngoan là rao bằng tiếng Quảng Đông cho nó oai và lạ tai là ngầu nhục phấn rồi thành “nhục phấn… phấn ơ”… sau cùng còn lại tiếng phở… Phở là món ăn do người Việt Nam tạo ra.</p>
+        <img src="img-video/amthuc3mien/mienbac/phohanoi.jpg" alt="letet4.jpg" class="img12">
+        <p class="p1">Phở Hà Nội - một nét đặc sắc trong ẩm thực Hà thành</p>
+     <p>Phở Hà Nội có từ khi nào? Năm 1930, đã bắt đầu có phở ở Hà Nội. Nhưng mới là phở ban đầu. Những năm 1937-1938 phở đã có mặt ở khắp nơi. Nhưng đến năm 1939 - 1942 mới là thời đại hoàng kim của phở tại Hà Nội. Thật vậy, phở đã đến với tất cả các tầng lớp trong xã hội. Nó đã đạt đến mức ngon nhất, không thể nào ngon hơn được nữa. Nó có mặt suốt xuân, hạ, thu, đông. Người ta săn tìm, kén chọn những gánh phở, xe phở, hiệu phở cây đa Lý Quốc Sư, gánh nhà Thương Mắt, gánh chợ Hôm, gánh Cống Vọng, Hàm Long, Chợ Đuổi… và cũng nổi lên những hào kiệt:  phở Hội, phở Hiến, phở Tư Hói, phở Sửu đen, phở Tráng…</p><br>
+        <p>Ở Hà Nội, phở là một món ăn đặc biệt của người Hà Nội  và được dùng riêng 
+            như là một món quà sáng hoặc trưa và tối, không ăn cùng các món ăn khác. 
+            Từ giữa những năm 1960 đến trước những năm 1990 của thế kỷ XX, vì nhiều lý do nhất là khâu quản lý hành chính bao cấp về lương thực, thực phẩm, tại Hà Nội và nhiều tỉnh miền Bắc xuất hiện "phở không người lái" (phở không thịt) trong các cửa hàng mậu dịch quốc doanh. Cũng từ thời bao cấp, ở Hà Nội, người ta thường có thói quen cho thêm nhiều mì chính vào nước dùng. Cùng với thời đổi mới từ thập niên 90, phở đã phong phú hơn và người Hà Nội thường ăn phở với những miếng quẩy nhỏ (từ thập kỷ 60 đến giữa thập kỷ 80 nhưng do ở giai đoạn khó khăn nên quẩy bị mất đi khoảng 1995 quẩy đã quay trở lại).   
         </p>
-     <img src="./img-video/nemchua2.jfif" alt="pho2.jpg">
-     <p class="p1">Nem chua của Việt Nam giúp khoa học thế giới giải bài toán hóc búa    </p>
-     <p>Như con người xứ Huế, nem chua xứ Huế cũng sở hữu hương vị thanh tao và nhã nhặn. Vị chua thanh của thịt lên men tự nhiên kết hợp với vị thơm cay cay của ớt, tỏi và vị ngọt, giòn dai của da heo. Tất cả hòa quyện tạo nên sự đậm đà đặc trưng của chiếc nem đặc sản Huế. </p>
-     <img src="./img-video/nemchua3.jfif" alt="pho1.jpg">
-      <p>Nem chua là đặc sản Thanh Hóa khiến bao thực khách của cả nước thương nhớ ngay sau lần đầu nếm thử. Đây là thức quà nhất định phải đem về sau mỗi chuyến thăm xứ Thanh của bao người thành phố.</p>      
+     <img src="img-video/pho2.jpg" alt="pho2.jpg">
+     <p class="p1">Phở Hà Nội - một nét đặc sắc trong ẩm thực Hà thành</p>
+     <p>Thành phần chính của phở là bánh phở và nước dùng (hay nước lèo theo cách gọi miền Nam) cùng với thịt bò hoặc gà cắt lát mỏng. Ngoài ra còn kèm theo các gia vị như: tương, tiêu, chanh, nước nắm, ớt,... Những gia vị này được thêm vào tùy theo khẩu vị của từng người dùng. Phở thông thường dùng làm món điểm tâm buổi sáng hoặc ăn đêm, nhưng ở các thành phố lớn món ăn này được thưởng thức trong cả ngày.
+      Để có được những bát phở ngon tùy thuộc rất nhiều vào kinh nghiệm và bí quyết truyền thống của người chế biến, trong đó quan trọng đặc biệt là nồi nước dùng. Nước dùng cho nồi phở thường là nước dùng trong được ninh từ xương bò (nếu người nội trợ không nhiều kinh nghiệm để khử mùi xương bò thì có thể thay bằng xương lợn), sá sùng, kèm nhiều loại gia vị bao gồm quế, hồi, gừng nướng, thảo quả, đinh hương, hạt mùi, hành khô nướng. Thịt dùng cho món phở là thịt bò (với đủ loại thịt bắp, nạm, gầu được làm tái hay chín hẳn) hoặc thịt gà (gà ta già luộc, xé thịt cho thịt ngọt đậm đà). "Bánh phở" theo truyền thống được làm từ bột gạo, tráng thành tấm mỏng rồi cắt thành sợi. Phở luôn được thưởng thức khi còn nóng hổi.</p>
+     <img src="img-video/pho1.jpg" alt="pho1.jpg">
+      <p>Phở luôn được gia công, cải tiến để thoả mãn cái “gu” thanh lịch của người Tràng An. Người ta nghĩ ra nhiều cách như cho vào nước dùng chất ngọt thực vật của su hào rồi cho thêm tôm he, sá sùng, húng lìu, gừng, xương lợn… Nước dùng được ninh bằng củi trong 12 tiếng đồng hồ với ngọn lửa nhẹ. Mở nắp thùng nước dùng ra là có một làn khói mơ hồ, thơm nức từ đầu phố đến cuối phố. Nó có một mùi vị dễ chịu, không thể nào quên được. Vừa trần gian vừa bay bổng.Trên thế giới nước nào có người Việt Nam là ở đó có phở. Các bạn nước ngoài mỗi khi sang Việt Nam cũng tìm đến với món phở. Phở dường như là một trong những nét tiêu biểu của văn hoá ẩm thực Thăng Long – Hà Nội.</p>      
     </section>
      <hr class="hr1">
 </div>
@@ -83,11 +86,11 @@
     <span class="box-1"> Từ khóa</span>  
     <div class="keyword">
     <div class="keyword-slide">
-     <a href="amthucvietnam.html">Ẩm thực Việt Nam</a>   
-     <a href="amthuc3mien.html">Ẩm thực 3 miền</a> 
-     <a href="amthuclete.html">Ẩm thực lễ tết</a>
-     <a href="amthucduongpho.html">Ẩm thực Đường phố </a>
-     <a href="amthuctinhthanh.html">Ẩm thực các tỉnh, thành</a>
+     <a href="">Ẩm thực Việt Nam</a>   
+     <a href="">Ẩm thực 3 miền</a> 
+     <a href="">Ẩm thực lễ tết</a>
+     <a href="">Ẩm thực Đường phố Ẩm thực các tỉnh, thành</a>
+     <a href="">Ẩm thực Đường phố</a>
     </div>
 </div>
 </div>
