--- a/2324802010380-NguyenNgocTram/review.html
+++ b/2324802010380-NguyenNgocTram/review.html
@@ -21,14 +21,13 @@
           <img src="img-video/Vietnamfood.png" alt="Vietnamfood.png">
         <a href="#" class="title"><span>VIETNAM</span>FOOD</a>
     
-        <nav id="Menu">
-          <a href="Trangchu.html" class="home">Trang chủ</a>
-          <a href="information.html">Thông tin</a>
-          <a href="book.html">Đặt nhà hàng</a>
-          <a href="review.html">Review</a>
-          <a href="contact.html">Liên hệ</a>
-          <a href="Map.html">Map</a>
-      </nav>
+    <nav id="Menu">
+        <a href="Trangchu.html" class="home">Trang chủ</a>
+        <a href="information.html">Thông tin</a>
+        <a href="book.html">Đặt nhà hàng</a>
+        <a href="review.html">Review</a>
+        <a href="contact.html">Liên hệ</a>
+    </nav>
     <div class="icon">
         <i class="fas fa-search" id="search-btn"></i>
         <i class="fas fa-user" id="login-btn"></i>
@@ -129,7 +128,7 @@
     <div class="vietfood">
        <h1>VIETNAMFOOD </h1>
        <p>Ðói thì thèm thịt thèm xôi, hễ no cơm tẻ thì thôi mọi đường</p>
-       <img src="img-video/Vietnamfood.png" alt="Vietnamfood.png" class="thongbao">
+       <img src="img-video/Vietnamfood.png" alt="Vietnamfood.png">
     </div>
     <div class="Lienhe">
        <h3>LIÊN HỆ CHÚNG TÔI</h3>
@@ -137,7 +136,7 @@
        <p>Địa chỉ: Thủ Dầu Một, Bình Dương</p>
        <p>Phone: 1900 345 213</p>
        <p>Email:Vietnamfood@gmail.com</p>
-       <img src="img-video/thongbaocongthuong.png" alt="thongbaocongthuong.png" class="thongbao">   
+       <img src="img-video/thongbaocongthuong.png" alt="thongbaocongthuong.png">   
     </div>
    <div class="baiviet">
        <h3>BÀI VIẾT ĐƯỢC XEM NHIỀU NHẤT</h3>
