--- a/2324802010380-NguyenNgocTram/amthuctinhthanh.html
+++ b/2324802010380-NguyenNgocTram/amthuctinhthanh.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NÉT ĐẶC TRƯNG VỀ ẨM THỰC CỦA TỪNG TỈNH THÀNH TRÊN ĐẤT NƯỚC VIỆT NAM </title>
+    <title>ẨM THỰC VIỆT NAM</title>
     <link rel="icon" href="img-video/Vietnamfood.png">
     <link rel="stylesheet" href="web.css">
     <link rel="stylesheet" href="inf.css">
@@ -21,14 +21,13 @@
           <img src="img-video/Vietnamfood.png" alt="Vietnamfood.png">
         <a href="#" class="title"><span>VIETNAM</span>FOOD</a>
     
-        <nav id="Menu">
-            <a href="Trangchu.html" class="home">Trang chủ</a>
-            <a href="information.html">Thông tin</a>
-            <a href="book.html">Đặt nhà hàng</a>
-            <a href="review.html">Review</a>
-            <a href="contact.html">Liên hệ</a>
-            <a href="Map.html">Map</a>
-        </nav>
+    <nav id="Menu">
+        <a href="Trangchu.html" class="home">Trang chủ</a>
+        <a href="information.html">Thông tin</a>
+        <a href="book.html">Đặt nhà hàng</a>
+        <a href="review.html">Review</a>
+        <a href="contact.html">Liên hệ</a>
+    </nav>
     <div class="icon">
         <i class="fas fa-search" id="search-btn"></i>
         <i class="fas fa-user" id="login-btn"></i>
@@ -59,7 +58,7 @@
 
 <!--amthucvietnam-->
 <div class="vietnam">
-    <h1 class="at">NÉT ĐẶC TRƯNG VỀ ẨM THỰC CỦA TỪNG TỈNH THÀNH TRÊN ĐẤT NƯỚC VIỆT NAM </h1>
+    <h1 class="at">ẨM THỰC VIỆT NAM</h1>
     <p class="tg">3/2/2024 15:27 GMT+7</p>
     <hr class="hr1">
     <section class="noidung">
@@ -167,11 +166,11 @@
     <span class="box-1"> Từ khóa</span>  
     <div class="keyword">
     <div class="keyword-slide">
-     <a href="amthucvietnam.html">Ẩm thực Việt Nam</a>   
-     <a href="amthuc3mien.html">Ẩm thực 3 miền</a> 
-     <a href="amthuclete.html">Ẩm thực lễ tết</a>
-     <a href="amthucduongpho.html">Ẩm thực Đường phố </a>
-     <a href="amthuctinhthanh.html">Ẩm thực các tỉnh, thành</a>
+     <a href="">Ẩm thực Việt Nam</a>   
+     <a href="">Ẩm thực 3 miền</a> 
+     <a href="">Ẩm thực lễ tết</a>
+     <a href="">Ẩm thực Đường phố Ẩm thực các tỉnh, thành</a>
+     <a href="">Ẩm thực Đường phố</a>
     </div>
 </div>
 </div>
