--- a/2324802010380-NguyenNgocTram/book.html
+++ b/2324802010380-NguyenNgocTram/book.html
@@ -21,14 +21,13 @@
           <img src="img-video/Vietnamfood.png" alt="Vietnamfood.png">
         <a href="#" class="title"><span>VIETNAM</span>FOOD</a>
     
-        <nav id="Menu">
-          <a href="Trangchu.html" class="home">Trang chủ</a>
-          <a href="information.html">Thông tin</a>
-          <a href="book.html">Đặt nhà hàng</a>
-          <a href="review.html">Review</a>
-          <a href="contact.html">Liên hệ</a>
-          <a href="Map.html">Map</a>
-      </nav>
+    <nav id="Menu">
+        <a href="Trangchu.html" class="home">Trang chủ</a>
+        <a href="information.html">Thông tin</a>
+        <a href="book.html">Đặt nhà hàng</a>
+        <a href="review.html">Review</a>
+        <a href="contact.html">Liên hệ</a>
+    </nav>
     <div class="icon">
         <i class="fas fa-search" id="search-btn"></i>
         <i class="fas fa-user" id="login-btn"></i>
@@ -81,42 +80,16 @@
      <input type="submit" value="Đặt" class="btn">
   </form>  
 </div>     
-<!--nhahang-->
-<h1 class="at4">NHÀ HÀNG, QUÁN ĂN ĐƯỢC RECOMENT NHIỀU NHẤT </h1>
- <div class="cacmenucon">     
-    <div class="menucon">
-        <a href="amthucduongpho.html"><img src="./img-video/quan-bui-644770 (1).jpg" alt="quan-bui-644770 (1).jpg"></a>
-        <a href="https://maps.app.goo.gl/yofVEHkmMAZgAUHXA" ><p>Quán bụi</p></a>
-    </div>
-    <div class="menucon">
-      <a href="amthucduongpho.html"><img src="./img-video/sSecret Garden Restaurant.jpg" alt="Secret Garden Restaurant.jpg"></a>
-      <a href="https://maps.app.goo.gl/qENrcydypKtehvMTA" ><p>Secret Garden Restaurant</p></a>
-  </div>
-  <div class="menucon">
-    <a href="amthucduongpho.html"><img src="./img-video/nha-hang-phung-thanh-1302118.jpg" alt="Nhà hàng Phụng Thành.jpg"></a>
-    <a href="https://maps.app.goo.gl/cCNN45XhCvdEtn7MA" ><p>Nhà hàng Phụng Thành</p></a>
-</div>
-<div class="menucon">
-  <a href="amthucduongpho.html"><img src="./img-video/nethue.jpg" alt="nethue.jpg"></a>
-  <a href="https://maps.app.goo.gl/YjFz5iWWWibLpDWK6" ><p>Nét Huế Restaurant</p></a>
-</div>
- </div>
- <div class="menucon">
-  <a href="amthucduongpho.html"><img src="./img-video/nethue.jpg" alt="nethue.jpg"></a>
-  <a href="https://maps.app.goo.gl/YjFz5iWWWibLpDWK6" ><p>Nét Huế Restaurant</p></a>
-</div>
- </div>
-<!--Nha hang-->
 
 <div class="key">
   <span class="box-1"> Từ khóa</span>  
   <div class="keyword">
   <div class="keyword-slide">
-   <a href="amthucvietnam.html">Ẩm thực Việt Nam</a>   
-   <a href="amthuc3mien.html">Ẩm thực 3 miền</a> 
-   <a href="amthuclete.html">Ẩm thực lễ tết</a>
-   <a href="amthucduongpho.html">Ẩm thực Đường phố </a>
-   <a href="amthuctinhthanh.html">Ẩm thực các tỉnh, thành</a>
+   <a href="">Ẩm thực Việt Nam</a>   
+   <a href="">Ẩm thực 3 miền</a> 
+   <a href="">Ẩm thực lễ tết</a>
+   <a href="">Ẩm thực Đường phố Ẩm thực các tỉnh, thành</a>
+   <a href="">Ẩm thực Đường phố</a>
   </div>
 </div>
 </div>
